--- a/index.html
+++ b/index.html
@@ -32,33 +32,38 @@
     <main>
       <div class="main" class="shadow">
         <article class="article">
-          <h1 class="heading">Why Learn Python?</h1>
+          <h1 class="heading">Background</h1>
           <p>
-            Python is a general-purpose, versatile and popular programming
-            language. Python is also a great first language because it is
-            concise and easy to read. A good language to have in any
-            programmer's stack, Python can be used for everything from web
-            development to software development and data science applications.
+            I graduated from Belarusian National Technical University. My major
+            - Customs Business and I was working as a customs agent. In 2016 I
+            moved to the US and here I was wokring in a bread company, also I
+            have a side job in e-commerce industry.
           </p>
         </article>
         <article class="article">
-          <h1 class="heading">Don't just read code, run it</h1>
+          <h1 class="heading">I guess coding is in my blood</h1>
           <p>
-            Following along with lessons by simply reading the code can be a
-            significant problem when people start programming.
+            All my life I play video games. I started from Atari console and
+            then it was Dendy, Sega, Super Nintendo, Playstation. After time my
+            father bought me a PC when I was in ninth grade.I was playing in
+            Counter-Strike a lot. I had to make an aliases in developer console
+            to make my playing easier. For example, instead of pressing 4 keys I
+            made a script, when you press one button you could get all
+            ammunition and all grenades in Counter-Strike. It saves time and you
+            can get a better position. I'm a former professional Counter-Strike
+            Player.
           </p>
 
           <p>
-            When you are learning how to code, you should try to write and run
-            it by yourself. Take the time to do it - you will understand it
-            better, and you will have fun trying to modify the code to create
-            your programs.
+            I want to become a web developer because I like what I'm doing. When
+            you get a neat and right result from coding is priceless.
           </p>
-
+        </article>
+        <article class="article">
+          <h1 class="heading">Hobbies</h1>
           <p>
-            Here's another example: when you are searching for a code on GitHub,
-            why not try it out? It can be fun to understand someone else's work
-            and be able to integrate it into your project.
+            I like computer games, of course. Also travelling is my passion.
+            This is the only thing you can buy that makes you richer.
           </p>
         </article>
       </div>
