--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1 class="contact-h1">Contact Me</h1>
 
         <br />
-        <form action="mailto:hello@gmail.com" method="POST">
+        <form action="mailto:dmitrushok@gmail.com" method="POST">
           <label for="name"><strong>Name</strong></label>
           <br />
           <input type="text" id="name" placeholder="Your Name" /> <br />
