added link to my project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <nav>
       <ul>
         <li><a class="nav-buttons" href="#">About me</a></li>
-        <li><a class="nav-buttons" href="#">My projects</a></li>
+        <li>
+          <a
+            class="nav-buttons"
+            target="_blank"
+            href="https://ulasau-guess-my-number.netlify.app/"
+            >My projects</a
+          >
+        </li>
         <li><a class="nav-buttons" href="#">Contact information</a></li>
         <li><a class="nav-buttons" href="#">Fun facts</a></li>
       </ul>
@@ -59,13 +66,13 @@
             you get a neat and right result from coding is priceless.
           </p>
         </article>
-        <article class="article">
+        <!-- <article class="article">
           <h1 class="heading">Hobbies</h1>
           <p>
             I like computer games, of course. Also travelling is my passion.
             This is the only thing you can buy that makes you richer.
           </p>
-        </article>
+        </article> -->
       </div>
 
       <!-- Side -->
