--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Dmitry Ulasau's portfolio</title>
-    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -27,7 +27,7 @@
 
     <!-- Hero image -->
     <div>
-      <img src="/images/Hero.jpg" />
+      <img src="images/Hero.jpg" />
       <div class="hero-text">
         <h1>Hi,</h1>
         <h1>I'm Dmitry</h1>
@@ -82,7 +82,7 @@
             class="side-image"
             style="opacity: 1; width: 30%"
             id="profile-image"
-            src="/images/LinkedIN.png"
+            src="images/LinkedIN.png"
             alt="Dmitry Ulasau"
             width="10%"
           />
